; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_print.c_cmd_pDj.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_print.c_cmd_pDj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }

@.str = private unnamed_addr constant [28 x i8] c"cannot allocate %d byte(s)\0A\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i8*)* @cmd_pDj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cmd_pDj(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @r_num_math(i32 %10, i8* %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %5, align 4
  br label %18

18:                                               ; preds = %15, %2
  %19 = call i32* (...) @pj_new()
  store i32* %19, i32** %6, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %18
  br label %61

23:                                               ; preds = %18
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @pj_a(i32* %24)
  %26 = load i32, i32* %5, align 4
  %27 = call i32* @malloc(i32 %26)
  store i32* %27, i32** %7, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %50

30:                                               ; preds = %23
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32*, i32** %7, align 8
  %38 = load i32, i32* %5, align 4
  %39 = call i32 @r_io_read_at(i32 %33, i32 %36, i32* %37, i32 %38)
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = load i32*, i32** %7, align 8
  %45 = load i32, i32* %5, align 4
  %46 = load i32*, i32** %6, align 8
  %47 = call i32 @r_core_print_disasm_json(%struct.TYPE_4__* %40, i32 %43, i32* %44, i32 %45, i32 0, i32* %46)
  %48 = load i32*, i32** %7, align 8
  %49 = call i32 @free(i32* %48)
  br label %53

50:                                               ; preds = %23
  %51 = load i32, i32* %5, align 4
  %52 = call i32 @eprintf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %51)
  br label %53

53:                                               ; preds = %50, %30
  %54 = load i32*, i32** %6, align 8
  %55 = call i32 @pj_end(i32* %54)
  %56 = load i32*, i32** %6, align 8
  %57 = call i32 @pj_string(i32* %56)
  %58 = call i32 @r_cons_printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %57)
  %59 = load i32*, i32** %6, align 8
  %60 = call i32 @pj_free(i32* %59)
  br label %61

61:                                               ; preds = %53, %22
  ret void
}

declare dso_local i32 @r_num_math(i32, i8*) #1

declare dso_local i32* @pj_new(...) #1

declare dso_local i32 @pj_a(i32*) #1

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @r_io_read_at(i32, i32, i32*, i32) #1

declare dso_local i32 @r_core_print_disasm_json(%struct.TYPE_4__*, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @eprintf(i8*, i32) #1

declare dso_local i32 @pj_end(i32*) #1

declare dso_local i32 @r_cons_printf(i8*, i32) #1

declare dso_local i32 @pj_string(i32*) #1

declare dso_local i32 @pj_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
